fix: wpp <ol> number truncation bug again

--- a/css/sspai.css
+++ b/css/sspai.css
@@ -94,6 +94,7 @@ ul {
 ol {
     margin-top: 12px;
     margin-bottom: 20px;
+    margin-left: 10px;
     padding-left: 30px;
     line-height: 1.8;
 }
